<resources>
    <string name="app_name">E-motions</string>

    <string name="action_settings">Settings</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="passcode">Passcode</string>
    <string name="confirm_passcode">Confirm Passcode</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="sec_question_1">Security Question1</string>
    <string name="answer">Answer</string>
    <string name="confirm_answer">Confirm Answer</string>
    <string name="sec_question_2">Security Question 2</string>
    <string name="save">Save</string>


    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="saving_error">Your login information could not be saved. You mill have to re-enter it if you close the application</string>
    <string name ="incorrect_login">The username or password is incorrect</string>
    <string name="error_passwords_not_matching">The passcodes do not match</string>
    <string name="error_answers_not_matching">The answers do not match</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="sign_in_successful">Sign in successful</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title">Profile</string>
    <string-array name="navigation_drawer_fragments">
        <item>Home</item>
        <item>Personal</item>
        <item>Calendar</item>
        <item>Map</item>
        <item>Diary</item>
        <item>Events</item>
        <item>Trips</item>
    </string-array>

    <string-array name="place_types">
        <item>Food</item>
        <item>Drink</item>
        <item>Business</item>
        <item>Fun</item>
        <item>Shopping</item>
    </string-array>

    <string-array name="shopping_place_types">
        <item>bicycle_store</item>
        <item>book_store</item>
        <item>clothing_store</item>
        <item>convenience_store</item>
        <item>department_store</item>
        <item>electronics_store</item>
        <item>furniture_store</item>
        <item>grocery_or_supermarket</item>
        <item>hardware_store</item>
        <item>home_goods_store</item>
        <item>jewelry_store"</item>
    </string-array>
    <string-array name="fun_place_types">
        <item>amusement_park</item>
        <item>aquarium</item>
        <item>art_gallery</item>
        <item>bowling_alley</item>
        <item>casino</item>
        <item>movie_theater</item>
        <item>museum</item>
        <item>night_club</item>
        <item>park</item>
        <item>shoe_store</item>
        <item>shopping_mall</item>
        <item>spa</item>
        <item>stadium</item>
        <item>point_of_interest</item>
    </string-array>

    <string-array name="business_place_types">
        <item>finance</item>
        <item>insurance_agency</item>
        <item>lawyer</item>
        <item>local_government_office</item>
        <item>post_office</item>
    </string-array>

    <string-array name="drink_place_types">
        <item>liquor_store</item>
        <item>bar</item>
    </string-array>

    <string-array name="food_place_types">
        <item>bakery</item>
        <item>cafe</item>
        <item>food</item>
        <item>restaurant</item>
    </string-array>

    <string name="home">Home</string>
    <string name="personal">Personal</string>
    <string name="calendar">Calendar</string>
    <string name="map">Map</string>
    <string name="diary">Diary</string>
    <string name="events">Events</string>
    <string name="trips">Trips</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example</string>

    <string name="hello_world">Hello world!</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="paint">Paint</string>
    <string name="nickname">NICKNAME</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="relationship_status">Relationship Status</string>
    <string name="title_activity_note">NoteActivity</string>

    <string name="note_hint">Dear Diary…</string>

    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="event_description">Event Description</string>
    <string name="get_reminders">Get Reminders</string>
    <string name="trip_name">Trip Name</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="trip_events">Trip Events</string>
    <string name="trip_events_default">No events have been added to this trip</string>
    <string name="add_events">Add Events</string>
    <string name="no_trips">There are no trips to display</string>
    <string name="no_events">There are no events to display</string>
    <string name="no_diary_entries">There are no diary entries to display</string>
    <string name="new_diary_entry">New Diary Entry</string>
    <string name="new_trip">New Trip</string>
    <string name="new_event">New Event</string>
    <string name="title_hint">Enter a Title</string>
    <string name="image">image</string>
    <string name="speak">speak</string>
    <string name="speech_prompt">Say Something</string>
    <string name="speech_not_supported">Speech to text is not supported by this device</string>
    <string name="import_image">Import Image</string>
    <string name="icon_content_description">Description</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delete">Delete</string>
    <string name="change_image">Change Image</string>
    <string name="splash_image">splash image</string>
    <string name="e_motions">E-Motions</string>
    <string name="add_note">Add Note</string>
    <string name="search">Search</string>
    <string name="search_prompt">Enter a search value</string>
    <string name="pick_toppings">Pick Toppings</string>
    <string name="description">Description</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="aroundme_placedistance">Distance</string>
    <string name="aroundme_nolocation">No Location</string>
    <string name="none">none</string>
    <string name="edit">Edit</string>
    <string name="export_to_pdf">Export to PDF</string>
    <string name="save_to_pdf">Save To PDF</string>
    <string name="get_place_suggestions">Get Place Suggestions</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

    <string name="free_draw">Free Draw</string>
    <string name="new_card">New Card</string>
    <string name="password">Password</string>
    <string name="expiry_date">Expiry Date</string>
</resources>
