<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/new_diary_entry" android:title="@string/new_diary_entry"
        app:showAsAction="ifRoom"
        android:icon="@drawable/new_note"/>
    <item android:id="@+id/new_event" android:title="@string/new_event"
        android:icon="@drawable/event"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/new_trip" android:title="@string/new_trip"
        android:icon="@drawable/trip"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/new_card" android:title="@string/new_card"
        app:showAsAction="ifRoom"/>

</menu>
